# mcp-shell-aliases

./: .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  README.md  TODO.md  bootstrap.py  config.yaml  gemini-extension.json  mcp-dependency-delivery-guide.md  pyproject.toml  requirements.runtime.txt  requirements.txt  run_tests.sh  test_extension.sh
docker/: Dockerfile.gemini-test  Dockerfile.smoke
docs/: CONFIGURATION.md  CONTRIBUTING.md  SECURITY.md  TESTING.md  TODO.md  TROUBLESHOOTING.md
examples/: sample_config.yaml
gemini-shell-aliases/: .coverage  .gitignore  README.md  config.yaml  gemini-extension.json  package-lock.json  package.json  pyproject.toml
gemini-shell-aliases/docs/: CONFIGURATION.md  SECURITY.md  TROUBLESHOOTING.md  Testing.md
gemini-shell-aliases/examples/: sample_config.yaml
gemini-shell-aliases/mcp_bash_aliases/: aliases.py  cli.py  config.py  errors.py  execution.py  safety.py  server.py
gemini-shell-aliases/src/: index.ts
gemini-shell-aliases/tests/: test_aliases.py  test_cli.py  test_config.py  test_execution.py  test_safety.py  test_server.py
mcp_bash_aliases/: __init__.py  __main__.py  aliases.py  cli.py  config.py  errors.py  execution.py  safety.py  server.py
mcp_shell_aliases/: __init__.py  aliases.py  cli.py  config.py  errors.py  execution.py  safety.py  server.py
scripts/: docker-gemini-extensions-test.sh  docker-smoke.sh
tests/: test_aliases.py  test_cli.py  test_config.py  test_execution.py  test_safety.py  test_server.py
tmp_test_dir/: aliases
