[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bash-aliases"
version = "0.1.0"
description = "Model Context Protocol server that exposes shell aliases as safe tools."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Gemini Shell Aliases Team" }
]
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=0.2.0",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.7"
]

[project.scripts]
mcp-bash-aliases = "mcp_bash_aliases.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
strict = true
